# multitop

./: .gitignore  CMakeLists.txt  calsds.py  cmake.bat  coef.csv  coef2.csv  erfinv.cpp  fNN.jit  fNN_cpu.pt  fNN_cpu_64.pt  fNN_gpu_64.pt  main.cpp  model-cpu.jit  multitop.sln  multitop.vcxproj  test3.py  viewresult.m
IO/: matrixIO.cpp  matrixIO.h
culib/: cudaCommon.cuh  gMat.cu  gMat.cuh  gpuVector.cuh
element/: element.cpp  element.cu  element.cuh  element.h
fem/: fem.cpp  fem.cu  fem.cuh  fem.h
logger/: logger.h
mma/: mmacontext.cu  mmacontext.h  mmaopt.cu  mmasolver.cpp  mmasolver.h
mma-g/: CMakeLists.txt  mmaOpt.cpp  mmaOpt.cu  mmaOpt.h
output/: obj.txt  objc.txt  x.txt  xc.txt
